[CHL-29] MVP for Dev Feedback on Pull Request (#2)
* Add call msbuild and read stdout

* Add sample run msbuild and logoutput

* Add sample filter only error logs

* Fix tab size = 2 and EOF = \n

* Add sameple type for log

* Add serverity parser

* Add log json output

* Change some config

* Add source log message

* remove unused code

* Change msbuild configuration

* Revert "Fix tab size = 2 and EOF = \n"

This reverts commit e5eb12f8ed55f025b8a3cfce83311caf6b7e055c.

* Add filebase parsing

* Revert "Revert "Fix tab size = 2 and EOF = \n""

This reverts commit eee5c449a643a1232255575e27489d022ac2c5c6.

* Add bypass build

* Remove unused code

* Add sample map feature pipeline

* implement map feature

* Add some sample pipeline

* Add sample mapfeature

* Add file parser

* Add Parser

* Implement File class

* Add tmp folder

* Use tmp folder

* Add self path join

* Update gitignore

* [WIP] Add agent class

* Add setting config

* Fix some missing type

* Add agent setting parser test

* Remove test

* Change scenario tests

* Fix bad settingsParse

* Resolve runtask after finished

* Fix missing type & import

* Implement agent

* Add agent debug log option

* Refactor

* Fix bad spawn event

* Fix typo

* Add sample app running

* Add bypass

* Refactor

* Refactor

* Add CSharpParser

* Fix anoying eslint

* Remove uneccesart setting

* Fix bad lineSplitter condition

* Add EOL

* Refactor

* Fix bad promisify calling

* Add error handling

* Add sample write log file

* Add test for agent

* Add CSharpParser

* Add test for CSharpParser

* Add test fro CsharpParser

* Run lint & formatter

* Refactor

* fix tests

* Fix test

* Update main.yml

* Fix tests

* Add octokit dependency

* Fix bad param for agent config

* [WIP] Add Report

* [WIP] Add provider

* Refactor

* Fix agent test

* Ensure WORKDIR is cor

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
         run: |
           yarn install # or yarn install
           yarn run lint # or yarn lint
-          yarn run test # or yarn test
+          yarn run test --ci # or yarn test --ci
           yarn run build # or yarn build
