--- a/package.json
+++ b/package.json
@@ -13,18 +13,29 @@
     "dev": "nodemon --inspect=5858 --config ./nodemon.json"
   },
   "devDependencies": {
+    "@octokit/types": "^5.4.1",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.10",
     "@types/node": "^14.0.27",
+    "@types/rimraf": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.0",
+    "nock": "^13.0.4",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@octokit/core": "^3.1.2",
+    "@octokit/rest": "^18.0.4",
+    "rimraf": "^3.0.2",
+    "slash": "^3.0.0",
+    "dotenv": "^8.2.0"
   }
 }
