--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ PROVIDER_OWNER=codeleague
 PROVIDER_TOKEN=14caf0652275c36160bbfa62347d785212a31b37
 PROVIDER_REPO=codecoach
 PROVIDER_PR_NUMBER=9
+PROVIDER_API_URL=
+PROVIDER_REPO_URL=
 AGENT_PATH=dotnet
 AGENT_PROJECT_TARGET=tmp/repo/sample/csharp/broken.csproj
 AGENT_REBUILD=true
