Allow agent and provider bypass config (#23)
* Add AGRNT_BYPASS_BUILD key

* Add git clone bypass key

* change key name

* Fix typo

* Add provider and agent bypass config

* Support bypass agent build loader

* expose bypass build

* Implement bypass build config

* Deprecated app bypass build constant

* Fix typo name

* Remove unused code

* Fix bad config git type

* Fix typo

* Expose bypass git clone

* Add provider clone key ignore

* Fix typo

* Implement git bypass clone

* Implement git clone bypass

* Fix typo

* Remove unused test

* Fix typo

* Fix bad boolean parsing

* Remove unsused code

* Fix typo agent

* Fix agent type typo

* Fix provider bypass typo

* Fix typo

* Fix typo

* Fix git clone bypass typo

--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@ PROVIDER_REPO=codecoach
 PROVIDER_PR_NUMBER=9
 PROVIDER_API_URL=
 PROVIDER_REPO_URL=
+PROVIDER_GIT_CLONE_BYPASS=false
 AGENT_PATH=dotnet
+AGENT_BUILD_BYPASS=false
 AGENT_PROJECT_TARGET=tmp/repo/sample/csharp/broken.csproj
 AGENT_REBUILD=true
 AGENT_VERBOSITY=q
