--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+APP_LOG_FILE_PATH=dotnetbuild.json
+APP_WARN_FILE_PATH=dotnetbuild.wrn
+APP_ERR_FILE_PATH=dotnetbuild.err
+APP_LOG_LINE_SPLITTER=\r\n
 PROVIDER=GitHub
 PROVIDER_OWNER=codeleague
 PROVIDER_TOKEN=14caf0652275c36160bbfa62347d785212a31b37
@@ -8,10 +12,10 @@ PROVIDER_REPO_URL=
 PROVIDER_GIT_CLONE_BYPASS=false
 AGENT_PATH=dotnet
 AGENT_BUILD_BYPASS=false
-AGENT_PROJECT_TARGET=tmp/repo/sample/csharp/broken.csproj
+AGENT_PROJECT_TARGET=/sample/csharp/broken.csproj
 AGENT_REBUILD=true
 AGENT_VERBOSITY=q
-AGENT_ERROR_LOG_PATH=tmp/dotnetbuild.err
-AGENT_WARN_LOG_PATH=tmp/dotnetbuild.wrn
-AGENT_LOG_PATH=tmp/dotnetbuild.json
+AGENT_ERROR_LOG_PATH=dotnetbuild.err
+AGENT_WARN_LOG_PATH=dotnetbuild.wrn
+AGENT_LOG_PATH=dotnetbuild.json
 
