--- a/src/test/env/Config.valid.spec.env
+++ b/src/test/env/Config.valid.spec.env
@@ -1,3 +1,7 @@
+APP_LOG_FILE_PATH=dotnetbuild.json
+APP_WARN_FILE_PATH=dotnetbuild.wrn
+APP_ERR_FILE_PATH=dotnetbuild.err
+APP_LOG_LINE_SPLITTER=\r\n
 PROVIDER=GitHub
 PROVIDER_OWNER=codeleague
 PROVIDER_TOKEN=14caf0652275c36160bbfa62347d785212a31b37
