Make touch-file Comment work on Gateway (#24)
* [WIP]  -change PROJECT_ROOT

* Add kcholapand credential for provider

* Make build output fullpath

* Fix CSharpParser output relative path from gitroot

* Make csharparser replace \\ to /

* Fix filter touchedFile

* WIP: make comment on file work

* Fix CSharpParser to enable parse no position detail log

* Fix parser match project source correctly & convert unix path

* FIX HTTP Error

* Fix parser test

* Rename agent.test to agent.spec

* Fix agent test

* Remove unneccessary log

* Revert create review comment parameter

* fix outdated comment problem

* clean import/ some weird code

* change test name for more understanding

* Fix EOL

* Normalise path before set to output

* Amend

* Use slash to normalise path

* Refractor

* Rename name method

* Remove unused import

* Remove unsued method

* Fix bad space

* Refactor double negative

* Fix missing await on using async method

* Fix line splitter is not escape character

* Refactor get issues from report in gh provider

* Refactor typo

* Refactor list touch files to parameter

* Public getToucehdIssues method

* Test github provider get touched issues function

* Restore env setting

* Fix unneccessary async

* Refactor name

* Fix bad console.trace

Co-authored-by: Thaweesak Saiwongse <Thaweesak.Saiwongse@agoda.com>
Co-authored-by: Krit Cholapand <flap.atyz@gmail.com>
Co-authored-by: Korbboon <korbboon.thuswongsa@agoda.com>

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 APP_LOG_FILE_PATH=dotnetbuild.json
 APP_WARN_FILE_PATH=dotnetbuild.wrn
 APP_ERR_FILE_PATH=dotnetbuild.err
-APP_LOG_LINE_SPLITTER=\r\n
+APP_LOG_LINE_SPLITTER=CRLF
 PROVIDER=GitHub
-PROVIDER_OWNER=codeleague
-PROVIDER_TOKEN=14caf0652275c36160bbfa62347d785212a31b37
-PROVIDER_REPO=codecoach
-PROVIDER_PR_NUMBER=9
-PROVIDER_API_URL=
-PROVIDER_REPO_URL=
+PROVIDER_OWNER=agoda-front-end
+PROVIDER_TOKEN=204c751c958a6adf2616961c02090a17ee96adff
+PROVIDER_REPO=Agoda.Gateway
+PROVIDER_PR_NUMBER=2746
+PROVIDER_API_URL=https://github.agodadev.io/api/v3
+PROVIDER_REPO_URL=https://github.agodadev.io/
 PROVIDER_GIT_CLONE_BYPASS=false
 AGENT_PATH=dotnet
 AGENT_BUILD_BYPASS=false
@@ -18,4 +18,3 @@ AGENT_VERBOSITY=q
 AGENT_ERROR_LOG_PATH=dotnetbuild.err
 AGENT_WARN_LOG_PATH=dotnetbuild.wrn
 AGENT_LOG_PATH=dotnetbuild.json
-
