--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_LOG_FILE_PATH=dotnetbuild.json
-APP_WARN_FILE_PATH=dotnetbuild.wrn
-APP_ERR_FILE_PATH=dotnetbuild.err
-APP_LOG_LINE_SPLITTER=LF
+LOG_FILE=dotnetbuild.json
+WARN_FILE=dotnetbuild.wrn
+ERR_FILE=dotnetbuild.err
+LOG_LINE_SPLITTER=LF
 PROVIDER=GitHub
 PROVIDER_OWNER=agoda-front-end
 PROVIDER_TOKEN=204c751c958a6adf2616961c02090a17ee96adff
@@ -12,9 +12,6 @@ PROVIDER_REPO_URL=https://github.agodadev.io/
 PROVIDER_GIT_CLONE_BYPASS=false
 AGENT_PATH=dotnet
 AGENT_BUILD_BYPASS=false
-AGENT_PROJECT_TARGET=/sample/csharp/broken.csproj
+AGENT_PROJECT_TARGET=Agoda.Gateway.sln
 AGENT_REBUILD=true
 AGENT_VERBOSITY=q
-AGENT_ERROR_LOG_PATH=dotnetbuild.err
-AGENT_WARN_LOG_PATH=dotnetbuild.wrn
-AGENT_LOG_PATH=dotnetbuild.json
