[CHL-63] Hot-fix C# parsing (#38)
* Change env deafult config to disable build and clone

* Add more descriptive err

* Add valid field

* Hotfix for cannot parse pattern

* Fix csharp valid test

* Add test for valid/invalid

* Fix report test

--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ PROVIDER_REPO=Agoda.Gateway
 PROVIDER_PR_NUMBER=2746
 PROVIDER_API_URL=https://github.agodadev.io/api/v3
 PROVIDER_REPO_URL=https://github.agodadev.io/
-PROVIDER_GIT_CLONE_BYPASS=false
+PROVIDER_GIT_CLONE_BYPASS=true
 AGENT_PATH=dotnet
-AGENT_BUILD_BYPASS=false
+AGENT_BUILD_BYPASS=true
 AGENT_PROJECT_TARGET=Agoda.Gateway.sln
 AGENT_REBUILD=true
 AGENT_VERBOSITY=q
