--- a/src/test/env/Config.invalid.spec.env
+++ b/src/test/env/Config.invalid.spec.env
@@ -5,3 +5,5 @@ PROVIDER_REPO=codecoach
 PROVIDER_PR_NUMBER=9
 AGENT_PATH=dotnet
 AGENT_PROJECT_TARGET=tmp/repo/sample/csharp/broken.csproj
+AGENT_REBUILD=true
+AGENT_VERBOSITY=
