--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint src/**/*.{js,ts} --quiet --fix",
+    "lint-ci": "eslint src/**/*.{js,ts}",
     "format": "prettier --write src/**/*.{js,ts}",
     "test": "jest",
     "build": "tsc --project tsconfig.build.json",
