Refactor agent + Command line arguments (#44)
* Refactor Agent to be CSharpAgent

* Add WebStorm build config

* Remove optional type

* Read arguments

* Remove BuildBypass option as it will be determined by content arguments

* Remove err file warn file that specific to dotnet

* Add default for dev in nodemon config

* --format => --type

* Args passing through function arguments

* Remove LOG_FILE WARN_FILE ERR_FILE

* validateConfig -> validateEnvConfig

* Make app a class

* Make indexes and tidy up imports

* Pull out config builder

* Improve imports

* Rename

* Move github base url config to args

* Combine owner repo and url stuff into single config

* Add no-clone and token option

* set dev default values

* no snake case

* github provider test

* Remove token as it's command args now

* Remove unused element

* Remove cases

* Test update

* Merge conflict

* Remove env

* Project type to enum

* Githib

* Content -> BuildLogFile

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write src/**/*.{js,ts}",
     "test": "jest",
     "build": "tsc --project tsconfig.build.json",
-    "dev": "nodemon --inspect=5858 --config ./nodemon.json"
+    "dev": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.agodadev.io/agoda-front-end/Agoda.Gateway.git --token=2e5fd1320b3befcb2a6d988399504dc4ed2797b1 --pr=2746 --type=dotnet --content=dotnetbuild.wrn --content=dotnetbuild.err --noClone"
   },
   "devDependencies": {
     "@octokit/types": "^5.4.1",
@@ -35,8 +35,9 @@
   "dependencies": {
     "@octokit/core": "^3.1.2",
     "@octokit/rest": "^18.0.4",
+    "dotenv": "^8.2.0",
     "rimraf": "^3.0.2",
     "slash": "^3.0.0",
-    "dotenv": "^8.2.0"
+    "yargs": "^16.0.3"
   }
 }
