Refactor GitHub provider (#60)
* Refactor Github.provider to GitHub.ts and GitHubPRService.ts

* Unused mocks

* Remove report as it's now unused

* Add webstorm run configs

* Typings

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "codeleague <virtualjoel@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint src/**/*.{js,ts} --quiet --fix",
-    "lint-ci": "eslint src/**/*.{js,ts}",
-    "format": "prettier --write src/**/*.{js,ts}",
+    "lint": "eslint 'src/**/*.{js,ts}' --quiet --fix",
+    "lint-ci": "eslint 'src/**/*.{js,ts}'",
+    "format": "prettier --write 'src/**/*.{js,ts}'",
     "test": "jest",
     "build": "tsc --project tsconfig.build.json",
     "prepare": "yarn build",
