[CHL-32] Add Support for TypeScript (#42)
* [WIP] Add tslint parser

* Add tslint output sample

* Update tslint-output to have absolute path

* Add lint command file

* [WIP] tslint parser

* Add empty ts agent

* Add ts to project type

* Make ts lint parser parse ts build logs

* Add dev:ts script

* [WIP] report to MSPA repository

* Remove unused code

* Fix bad import

* format tslint output

* Fix bad line identify

* Update tslint output

* correct dev:ts command

* Change tslint output example

* Implement relative path parsing

* format

* Add TSLint parser test

* mark valid/invalid log

* Add more test case to TSLint

* Handle do nothinh

* update command sample

* Ignore ts agent constructor

* Add error handling when cannot parsed a content

* Fix parsing error handling

* remove unused file

* rename ts to tslint

* change dev to dev:csharp

Co-authored-by: Krit Cholapand <krit.cholapand@agoda.com>
Co-authored-by: Plai <plai.rt.w@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "format": "prettier --write 'src/**/*.{js,ts}'",
     "test": "jest",
     "build": "tsc --project tsconfig.build.json",
-    "prepare": "yarn build",
-    "dev": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.agodadev.io/agoda-front-end/Agoda.Gateway.git --pr=2746 --token=2e5fd1320b3befcb2a6d988399504dc4ed2797b1 --type=csharp --buildLogFile=./tmp/dotnetbuild.wrn --buildLogFile=./tmp/dotnetbuild.err --output=./tmp/dotnetbuild.json --noClone"
+    "dev:csharp": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.agodadev.io/agoda-front-end/Agoda.Gateway.git --pr=2746 --token=2e5fd1320b3befcb2a6d988399504dc4ed2797b1 --type=csharp --buildLogFile=./tmp/dotnetbuild.wrn --buildLogFile=./tmp/dotnetbuild.err --output=./tmp/dotnetbuild.json --noClone",
+    "dev:tslint": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.agodadev.io/agoda-front-end/agoda-com-spa-mobile.git --pr=4664 --token=2e5fd1320b3befcb2a6d988399504dc4ed2797b1 --type=ts --buildLogFile=./sample/ts/tslint-output.json --output=./tmp/tsbuild.json --noClone",
+    "prepublishOnly": "yarn build"
   },
   "bin": {
     "codecoach": "dist/app.js"
