--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "format": "prettier --write 'src/**/*.{js,ts}'",
     "test": "jest",
     "build": "tsc --project tsconfig.build.json",
-    "dev:csharp": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.agodadev.io/agoda-front-end/Agoda.Gateway.git --pr=2746 --token=2e5fd1320b3befcb2a6d988399504dc4ed2797b1 --type=csharp --buildLogFile=./tmp/dotnetbuild.wrn --buildLogFile=./tmp/dotnetbuild.err --output=./tmp/dotnetbuild.json --noClone",
-    "dev:tslint": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.agodadev.io/agoda-front-end/agoda-com-spa-mobile.git --pr=4664 --token=2e5fd1320b3befcb2a6d988399504dc4ed2797b1 --type=ts --buildLogFile=./sample/ts/tslint-output.json --output=./tmp/tsbuild.json --noClone",
+    "dev:csharp": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.agodadev.io/agoda-front-end/Agoda.Gateway.git --pr=2746 --token=2e5fd1320b3befcb2a6d988399504dc4ed2797b1 --type=csharp --buildLogFile=./tmp/dotnetbuild.wrn --buildLogFile=./tmp/dotnetbuild.err --output=./tmp/dotnetbuild.json",
+    "dev:tslint": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.agodadev.io/agoda-front-end/agoda-com-spa-mobile.git --pr=4664 --token=2e5fd1320b3befcb2a6d988399504dc4ed2797b1 --type=tslint --buildLogFile=./sample/ts/tslint-output.json --output=./tmp/tsbuild.json",
     "prepublishOnly": "yarn build"
   },
   "bin": {
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "@octokit/types": "^5.4.1",
-    "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.10",
     "@types/node": "^14.0.27",
     "@types/rimraf": "^3.0.0",
@@ -49,7 +48,6 @@
   "dependencies": {
     "@octokit/core": "^3.1.2",
     "@octokit/rest": "^18.0.4",
-    "dotenv": "^8.2.0",
     "rimraf": "^3.0.2",
     "slash": "^3.0.0",
     "yargs": "^16.0.3"
