--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@octokit/rest": "^18.0.4",
     "rimraf": "^3.0.2",
     "slash": "^3.0.0",
+    "winston": "^3.3.3",
     "yargs": "^16.0.3"
   }
 }
