--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "jest": "^26.4.0",
     "nock": "^13.0.4",
     "nodemon": "^2.0.4",
