--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rimraf": "^3.0.2",
     "slash": "^3.0.0",
     "winston": "^3.3.3",
+    "xml-js": "^1.6.11",
     "yargs": "^16.0.3"
   }
 }
