Update dev script to escape semicolor for POSIX

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write 'src/**/*.{js,ts}'",
     "test": "jest",
     "build": "tsc --project tsconfig.build.json",
-    "dev": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.com/codeleague/codecoach.git --token=placeyourtokenhere --pr=15 -f='dotnetbuild;./sample/dotnetbuild/build.content;/repo/src' -f='tslint;./sample/tslint/tslint-output.json;C:/repo/src' -o=./tmp/out.json",
+    "dev": "nodemon --inspect=5858 --config ./nodemon.json -- --url=https://github.com/codeleague/codecoach.git --token=placeyourtokenhere --pr=15 -f='dotnetbuild\\;./sample/dotnetbuild/build.content\\;/repo/src' -o=./tmp/out.json",
     "prepublishOnly": "yarn build"
   },
   "bin": {
