--- a/.github/workflows/generate-changelog.yml
+++ b/.github/workflows/generate-changelog.yml
@@ -33,12 +33,18 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Store query output
+        run: |
+          cat << EOF > .changes.tmp
+          ${{ steps.get_all_releases_note.outputs.data }}'
+          EOF
+
       - name: Generate CHANGELOG
         run: >
-          echo '${{ fromJson(steps.get_all_releases_note.outputs.data).data.repository.releases.nodes.* }}'
-          > CHANGELOG.md
-#          | jq '.data.repository.releases.nodes[]' | { version: .tagName, when: .createdAt | fromdateiso8601 | strftime("%d %B %Y"), content: .description }'
-#          | jq -r '"# Version \(.version)\nReleased \(.when)\n\(.content)\n\n"'
+          jq '.data.repository.releases.nodes[]
+          | { version: .tagName, when: .createdAt | fromdateiso8601 | strftime("%d %B %Y"), content: .description }'
+          | "# Version \(.version)\nReleased \(.when)\n\(.content)\n\n"'
+          .changes.tmp
 
       - name: Commit files
         run: |
