--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@octokit/types": "^6.1.1",
     "@types/jest": "^26.0.18",
+    "@types/js-yaml": "^4.0.0",
     "@types/node": "^14.14.11",
     "@types/rimraf": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
@@ -46,6 +47,7 @@
   "dependencies": {
     "@octokit/core": "^3.2.4",
     "@octokit/rest": "^18.0.12",
+    "js-yaml": "^4.1.0",
     "rimraf": "^3.0.2",
     "slash": "^3.0.0",
     "winston": "^3.3.3",
