--- a/sample/config/config.yaml
+++ b/sample/config/config.yaml
@@ -1,7 +1,9 @@
-repo:
+provider:
   url: https://github.com/codeleague/codecoach
   pr: 40
   token: 123qwe123qwe123qwe123
+  userAgent: CodeCoach
+  timeZone: Asia/Bangkok
 buildLogFiles:
   - type: tslint
     file: /path/to/log.json
