--- a/sample/config/data-config.yaml
+++ b/sample/config/data-config.yaml
@@ -1,8 +1,7 @@
 repo:
   url: https://github.com/codeleague/codecoach
   runId: 40
-  latestCommit: 123qwe123qwe123qwe123qwe123qwe123qwe123q
-  token: 123qwe123qwe123qwe123
+  headCommit: 123qwe123qwe123qwe123qwe123qwe123qwe123q
 buildLogFiles:
   - type: tslint
     path: /path/to/log.json
