--- a/sample/config/data-config.yaml
+++ b/sample/config/data-config.yaml
@@ -2,6 +2,7 @@ repo:
   url: https://github.com/codeleague/codecoach
   runId: 40
   headCommit: 123qwe123qwe123qwe123qwe123qwe123qwe123q
+  branch: main
 buildLogFiles:
   - type: tslint
     path: /path/to/log.json
