--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,6 @@ jobs:
         run: yarn
 
       - name: Publish version ${{ env.VERSION }}
-        run: yarn publish --new-version ${{ env.VERSION }} --no-git-tag-version
+        run: yarn publish --access public --new-version ${{ env.VERSION }} --no-git-tag-version
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
