Use shared CI variable for docker image name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.IMAGE_NAME }}
+          images: ${{ env.DOCKER_IMAGE_NAME }}
           tags: |
             type=ref,event=pr
             type=sha
