--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,6 @@ jobs:
   publish-docker:
     env:
       VERSION: ${{ github.event.release.tag_name }}
-      IMAGE_NAME: encx/codecoach-cli
 
     runs-on: ubuntu-latest
 
@@ -76,7 +75,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.IMAGE_NAME }}
+          images: ${{ env.DOCKER_IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}},value=${{ env.VERSION }}
             type=semver,pattern={{major}}.{{minor}},value=${{ env.VERSION }}
