--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,30 +41,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ vars.DOCKER_IMAGE_NAME }}
-          tags: |
-            type=ref,event=pr
-            type=sha
-          labels: |
-            org.opencontainers.image.title=CodeCoach
-            org.opencontainers.image.description=Automated code review tool
-            org.opencontainers.image.licenses=MIT
-
-      - name: Build and push PR image
+      - name: Build
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          push: false
