--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -1,8 +1,9 @@
-name: Release
+name: Prerelease
 
 on:
-  release:
-    types: [ created ]
+  push:
+    branches:
+      - main
 
 jobs:
   publish-npm:
@@ -12,13 +13,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Version ${{ env.VERSION }} validity check
-        run: |
-          if [ $(npm info codecoach@^${{ env.VERSION }} | wc -c) -gt 0 ]; then
-            echo "Release version must be greater than existing released versions."
-            exit 1
-          fi
-
       - uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
@@ -42,28 +36,12 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-
-  publish-docker:
-    env:
-      VERSION: ${{ github.event.release.tag_name }}
-
+  docker-build:
+    name: "docker: Build amd push"
     runs-on: ubuntu-latest
 
     steps:
-      - name: Version ${{ env.VERSION }} validity check
-        run: |
-          if [ $(npm info codecoach@^${{ env.VERSION }} | wc -c) -gt 0 ]; then
-            echo "Release version must be greater than existing released versions."
-            exit 1
-          fi
-
       - uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -76,19 +54,16 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ vars.DOCKER_IMAGE_NAME }}
-          tags: |
-            type=semver,pattern={{version}},value=${{ env.VERSION }}
-            type=semver,pattern={{major}}.{{minor}},value=${{ env.VERSION }}
-            type=semver,pattern={{major}},value=${{ env.VERSION }}
-            type=ref,event=pr
+          tags: type=sha
           labels: ${{ vars.DOCKER_IMAGE_LABELS }}
 
-      - name: Build and push
+      - name: Build and push prerelease image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile
-          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  
